--- a/.config
+++ b/.config
@@ -118,7 +118,7 @@ CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe"
 
 CONFIG_CPU_TYPE=" "
 
-CONFIG_LINUX_5_15=y
+CONFIG_LINUX_5_10=y
 
 CONFIG_DEFAULT_base-files=y
 
@@ -370,7 +370,7 @@ CONFIG_SIGNATURE_CHECK=y
 
 #
 
-CONFIG_TESTING_KERNEL=y
+# CONFIG_TESTING_KERNEL is not set
 
 CONFIG_DISPLAY_SUPPORT=y
 
@@ -4036,7 +4036,7 @@ CONFIG_PACKAGE_kmod-crypto-hash=y
 
 # CONFIG_PACKAGE_kmod-fs-9p is not set
 
-# CONFIG_PACKAGE_kmod-fs-afs is not set
+# CONFIG_PACKAGE_kmod-fs-antfs is not set
 
 # CONFIG_PACKAGE_kmod-fs-autofs4 is not set
 
@@ -4058,8 +4058,6 @@ CONFIG_PACKAGE_kmod-crypto-hash=y
 
 # CONFIG_PACKAGE_kmod-fs-f2fs is not set
 
-# CONFIG_PACKAGE_kmod-fs-fscache is not set
-
 # CONFIG_PACKAGE_kmod-fs-hfs is not set
 
 # CONFIG_PACKAGE_kmod-fs-hfsplus is not set
@@ -4073,8 +4071,6 @@ CONFIG_PACKAGE_kmod-crypto-hash=y
 # CONFIG_PACKAGE_kmod-fs-minix is not set
 
 # CONFIG_PACKAGE_kmod-fs-msdos is not set
-
-# CONFIG_PACKAGE_kmod-fs-netfs is not set
 
 # CONFIG_PACKAGE_kmod-fs-nfs is not set
 
@@ -4786,12 +4782,6 @@ CONFIG_PACKAGE_kmod-mdio-devres=y
 
 # CONFIG_PACKAGE_kmod-mdio-gpio is not set
 
-# CONFIG_PACKAGE_kmod-mhi-net is not set
-
-# CONFIG_PACKAGE_kmod-mhi-wwan-ctrl is not set
-
-# CONFIG_PACKAGE_kmod-mhi-wwan-mbim is not set
-
 CONFIG_PACKAGE_kmod-mii=y
 
 # CONFIG_PACKAGE_kmod-mlx4-core is not set
@@ -5097,10 +5087,6 @@ CONFIG_PACKAGE_kmod-button-hotplug=y
 # CONFIG_PACKAGE_kmod-lp is not set
 
 # CONFIG_PACKAGE_kmod-meraki-mx100 is not set
-
-# CONFIG_PACKAGE_kmod-mhi-bus is not set
-
-# CONFIG_PACKAGE_kmod-mhi-pci-generic is not set
 
 # CONFIG_PACKAGE_kmod-mmc is not set
 
@@ -12009,6 +11995,8 @@ CONFIG_PACKAGE_partx-utils=y
 # CONFIG_PACKAGE_acl is not set
 
 # CONFIG_PACKAGE_afuse is not set
+
+# CONFIG_PACKAGE_antfs-mount is not set
 
 # CONFIG_PACKAGE_attr is not set
 
